# a2a

./: .gitignore  README.md
agent_hello_world/: __main__.py  agent_executor.py  pyproject.toml  run.sh
agent_multi_friend_scheduling/: pyproject.toml
agent_multi_friend_scheduling/host_agent/: agent.py  remote_agent_connection.py  tools.py
agent_multi_friend_scheduling/srijan_agent/: __main__.py  agent.py  agent_executor.py
rag_embed_documents/: chunking.py  embed_store.py  llm.py  main.py  query.py  requirements.txt
rag_embed_images/: main.py  semantic.py
rag_faq/: docker-compose.yml  insert_vectors.py
rag_faq/database/: vector_store.py
rag_multimodal/: embed_store.py  main.py  query.py  requirements.txt
rag_multimodal/demo/: main.py  rag_search.py  requirements.txt
vdb/: .env.example  requirements.txt
vdb/demo/: filter_search.py  hybrid_search.py  main.py  rag_search.py  utils.py
vdb/search/: utils.py
vdb/vector_database/: constants.py  database.py  main.py  models.py  movies.json  utils.py
vdb_structured_data/: app.py  database.py  main.py  models.py  utils.py
vector_database/: main.py
vector_database_structured_data/: database.py  models.py  utils.py
